--- a/.drone.yml
+++ b/.drone.yml
@@ -1,30 +1,34 @@
-- name: test app
-  image: docker
-  commands:
-    - docker build -t test-app -f Dockerfile-test .
-    - docker run test-app
-  volumes:
-    - name: docker
-      path: /var/run/docker.sock
-  when:
-    branch:
-      - master
-    event:
-      - pull_request
+kind: pipeline
+name: default
 
-- name: report code coverage
-  image: docker
-  environment:
-    CODECOV_TOKEN:
-      from_secret: CODECOV_TOKEN
-  commands:
-    - docker build -t report-coverage --build-arg CODECOV_TOKEN=$CODECOV_TOKEN -f Dockerfile-coverage .
-    - docker run report-coverage
-  volumes:
-    - name: docker
-      path: /var/run/docker.sock
-  when:
-    branch:
-      - master
-    event:
-      - pull_request
+steps:
+  - name: test app
+    image: docker
+    commands:
+      - docker build -t test-app -f Dockerfile-test .
+      - docker run test-app
+    volumes:
+      - name: docker
+        path: /var/run/docker.sock
+    when:
+      branch:
+        - master
+      event:
+        - pull_request
+
+  - name: report code coverage
+    image: docker
+    environment:
+      CODECOV_TOKEN:
+        from_secret: CODECOV_TOKEN
+    commands:
+      - docker build -t report-coverage --build-arg CODECOV_TOKEN=$CODECOV_TOKEN -f Dockerfile-coverage .
+      - docker run report-coverage
+    volumes:
+      - name: docker
+        path: /var/run/docker.sock
+    when:
+      branch:
+        - master
+      event:
+        - pull_request
