--- a/.drone.yml
+++ b/.drone.yml
@@ -32,3 +32,7 @@ steps:
         - master
       event:
         - pull_request
+volumes:
+  - name: docker
+    host:
+      path: /var/run/docker.sock
